Bug 439714 - Vector Libraries with no defined title are not shown in 5.0.0
Summary: Vector Libraries with no defined title are not shown in 5.0.0
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-07-10 09:18 UTC by Ahab Greybeard
Modified: 2021-07-27 07:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Small vector librart with no defined title (3.00 KB, image/svg+xml)
2021-07-10 09:18 UTC, Ahab Greybeard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ahab Greybeard 2021-07-10 09:18:43 UTC
Created attachment 139979 [details]
Small vector librart with no defined title

SUMMARY
If a vector library .svg file does not contain a defined title, it is not shown in the Vector Library docker in 5.0.0.
In 4.4.5, such a vector library is shown in the Vector Library docker and its displayed title is the name of the file that contains it (including any subfolder path).
An example file with no defined title, 'vect-lib-A-NT.svg' is attached.

STEPS TO REPRODUCE
1. Put the attached vect-lib-A-NT.svg file in the 'symbols' folder of the 'krita' resources folder, then start krita.
2. Do this for version 4.4.5 and for the 5.0.0-prealpha nightly build.
3. Note the content of the Vector Library docker.

OBSERVED RESULT
3.a) For version 4.4.5, the vector library is shown as 'vect-lib-A-NT.svg' in the Vector Library docker and it works as a vector library.
3.b) For version 5.0.0, the vector library is not shown in the Vector Library docker.

EXPECTED RESULT
3.b) The vector library should be shown in the Vector Library docker as it is in 4.4.5

ADDITIONAL INFORMATION
When making a vector library in Inkscape, it is possible to forget to give the library a title before saving it and this has been observed for quite a few vector libraries that have been made for use in krita.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version:
Comment 1 Halla Rempt 2021-07-27 07:40:30 UTC
Git commit 5f13af4f109246a144cb3927218a40331dab987e by Halla Rempt.
Committed on 27/07/2021 at 07:39.
Pushed by rempt into branch 'master'.

Vector libraries: Use the filename if the title element is empty

M  +3    -0    libs/flake/resources/KoSvgSymbolCollectionResource.cpp

https://invent.kde.org/graphics/krita/commit/5f13af4f109246a144cb3927218a40331dab987e