Vector libraries: Use the filename if the title element is empty

BUG:439714